--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="content" role="main">
-  <mat-grid-list cols="4" rowHeight="2:1">
-    <mat-grid-tile   [style.background]="'skyblue'" [colspan]="4" >
+  <mat-grid-list cols="3" rowHeight="1:1">
+    <mat-grid-tile   [style.background]="'skyblue'" [colspan]="3" [rowspan]="3">
       <div id="containerP5"></div>
     </mat-grid-tile>
     <mat-grid-tile  [style.background]="'lightgreen'">2</mat-grid-tile>
