--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <mat-grid-tile [style.background]="'lightpink'">3</mat-grid-tile>
     <mat-grid-tile [style.background]="'lightblue'">
       <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-      <button mat-button>Basic</button>
+      <button mat-button (click)="invalidateDrawn()" >Draw</button>
       <button mat-button color="primary">Primary</button>
     </mat-grid-tile>
   </mat-grid-list> 
