--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<div fxLayout="row">
-  <div style="background-color:lightgreen">aaa</div>
-  <div style="background-color:lightblue">bbb</div>
-</div>
-<div flex fxLayout="column">
+
+<div flex fxLayout="column" class="container">
   <div fxflex>header</div>
   <div fxFlex>
     <div id="containerP5"></div>
@@ -46,7 +43,9 @@
     <button mat-button (click)="invalidateDrawn()" >Draw</button>
     <button mat-button color="primary">Primary</button>
   </div>
+  <footer layout="row" class="md-padding">
+    This is the footer
+  </footer>
 </div>
 
-<div fxflex>footer</div>
 
