--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,29 @@
+<mat-toolbar color="primary">  
+  <button mat-icon-button [matMenuTriggerFor]="appMenu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <span> Pruebas de distintos componentes de gráficos</span>    
+</mat-toolbar>
+<mat-menu #appMenu="matMenu">
+  <button mat-menu-item>Settings</button>
+  <button mat-menu-item>Help</button>
+  <mat-list>
+    <a mat-list-item routerLink="/threeTest" routerLinkActive="active">Threejs Test</a>
+    <a mat-list-item routerLink="/p5Test" routerLinkActive="active">P5js Test</a>
+  </mat-list>
+</mat-menu>
+<nav>
+  <ul>
+    <li><a routerLink="/threeTest" routerLinkActive="active">Threejs Test</a></li>
+    <li><a routerLink="/p5Test" routerLinkActive="active">P5js Test</a></li>
+  </ul>
+</nav>
 
-<div flex fxLayout="column" class="container">
-  <div fxflex>header</div>
-  <div fxFlex>
-    <div id="containerP5"></div>
-  </div>
-  <div  id="controles" fxLayout="row"  style="background-color:lemonchiffon">
-    <div fxFlex="20" style="background-color:lightgreen">
-          <mat-slide-toggle matTooltip="Los cambios afectan a todos o al seleccionado" [(ngModel)]="selectedAllTrackers">Todos</mat-slide-toggle>  
-          <mat-form-field >    
-            <mat-label>Select</mat-label>
-            <input matInput placeholder="Ex. Pizza" type="number" id="myNumber" [disabled]="selectedAllTrackers" [(ngModel)]="selectedIdTracker"/>         
-          </mat-form-field>    
-    </div>
-    <div  fxFlex="40" style="background-color:lightblue" >
-      <mat-list>
-        <mat-list-item>        
-          <mat-label>angulo:</mat-label> <mat-slider   thumbLabel tickInterval="30" min="-90"  max="90" step="5" value="0"  (input)="onAngleChanged($event)"></mat-slider>        
-        </mat-list-item>
-        <mat-list-item>
-          <mat-label>bateria:</mat-label><mat-slider   thumbLabel tickInterval="10" min="0" max="100" step="5" value="100" (input)="onBatteryChanged($event)">Battery</mat-slider >
-        </mat-list-item>         
-      </mat-list>  
-    </div>  
-    <div  fxFlex="40" style="background-color:lightseagreen" >
-      <mat-list>
-        <mat-list-item>        
-          <mat-slide-toggle matTooltip="Alarma No coms" [(ngModel)]="alarms.noCom" (change)="onAlarmsChanged($event)">No COM</mat-slide-toggle>  
-        </mat-list-item>
-        <mat-list-item>
-          <mat-slide-toggle matTooltip="Posicion seguridad activada" [(ngModel)]="alarms.safePosition" (change)="onAlarmsChanged($event)">Safe Position</mat-slide-toggle>  
-        </mat-list-item>   
-        <mat-list-item>
-          <mat-slide-toggle matTooltip="Alarma de bateria" [(ngModel)]="alarms.battery" (change)="onAlarmsChanged($event)">Safe Position</mat-slide-toggle>  
-        </mat-list-item>  
-        <mat-list-item>
-          <mat-slide-toggle matTooltip="Alarma de motor" [(ngModel)]="alarms.motor" (change)="onAlarmsChanged($event)">Safe Position</mat-slide-toggle>  
-        </mat-list-item>         
-      </mat-list>  
-    </div>    
-  </div> 
-  <div style="background-color:lightsalmon">
-    <button mat-button (click)="invalidateDrawn()" >Draw</button>
-    <button mat-button color="primary">Primary</button>
-  </div>
-  <footer layout="row" class="md-padding">
-    This is the footer
+<div class="content" role="main">
+
+  <router-outlet></router-outlet>
+  <!-- Footer -->
+  <footer>
   </footer>
+
 </div>
-
-
