Basic THREE working

--- a/src/app/three-test/three-test.component.html
+++ b/src/app/three-test/three-test.component.html
@@ -1,1 +1,9 @@
-<p>three-test works!</p>
+<div flex fxLayout="column" class="container"> 
+    <p>three-test works!</p>
+    <canvas id="c"></canvas>
+    <div style="background-color:lightsalmon">
+        <button mat-button (click)="startWebGl()" >start</button>
+        
+    </div>
+</div>
+
