Página con three solar system test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 <nav>
   <ul>
     <li><a routerLink="/threeTest" routerLinkActive="active">Threejs Test</a></li>
+    <li><a routerLink="/threeBasicTest" routerLinkActive="active">Threejs Basic Test</a></li>
     <li><a routerLink="/p5Test" routerLinkActive="active">P5js Test</a></li>
   </ul>
 </nav>
