--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,17 +8,10 @@
   <button mat-menu-item>Settings</button>
   <button mat-menu-item>Help</button>
   <mat-list>
-    <a mat-list-item routerLink="/threeTest" routerLinkActive="active">Threejs Test</a>
-    <a mat-list-item routerLink="/p5Test" routerLinkActive="active">P5js Test</a>
+    <a mat-list-item routerLink="/threeTest" routerLinkActive="active">3D Test</a>
+    <a mat-list-item routerLink="/p5Test" routerLinkActive="active">2D Test</a>
   </mat-list>
 </mat-menu>
-<nav>
-  <ul>
-    <li><a routerLink="/threeTest" routerLinkActive="active">Threejs Test</a></li>
-    <li><a routerLink="/threeBasicTest" routerLinkActive="active">Threejs Basic Test</a></li>
-    <li><a routerLink="/p5Test" routerLinkActive="active">P5js Test</a></li>
-  </ul>
-</nav>
 
 <div class="content" role="main">
 
