--- a/src/app/three-test/three-test.component.html
+++ b/src/app/three-test/three-test.component.html
@@ -1,118 +1,84 @@
 <div flex fxLayout="column" class="container">
   <canvas id="c"></canvas>
   <div id="controles" fxLayout="row" style="background-color: lemonchiffon">
-    <div fxFlex="20" style="background-color: lightblue">
-      <mat-form-field appearance="fill">
-        <mat-label>Choose a date</mat-label>
-        <input
-          matInput
-          [matDatepicker]="picker"
-          [(ngModel)]="selectedDate"
-          (dateChange)="changedDate($event)"
-        />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
-      </mat-form-field>
-      <mat-list-item>
-        <mat-label>hora solar local:</mat-label>
-        <mat-slider  thumbLabel    tickInterval="2"  min="4"  max="22"  step="0.25"  value="12"(input)="onHourChanged($event)"
-        ></mat-slider>
-      </mat-list-item>
-      <span [innerText]="utcDate">Text with a badge</span>
-      <mat-form-field>
-        <mat-label>Latitude</mat-label>
-        <input  matInput placeholder="lat"  type="number"  [(ngModel)]="geoPos.latitude"  min="-85" max="85"/>                       
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Longitude</mat-label>
-        <input  matInput placeholder="long"  type="number"  [(ngModel)]="geoPos.longitude" min="-180" max="180" />                       
-      </mat-form-field>
+    
+    <div fxFlex="40" style="background-color: lightblue">
+      <mat-card>
+        <mat-card-header><mat-card-title>Location & Date</mat-card-title></mat-card-header>
+        <mat-card-content>
+          <mat-card-subtitle>Date Time</mat-card-subtitle>
+          <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker"
+              [(ngModel)]="selectedDate"
+              (dateChange)="changedDate($event)"
+            />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
+          </mat-form-field>
+          <mat-list-item>
+            <mat-label>Local solar time:</mat-label>
+            <mat-slider  thumbLabel    tickInterval="2"  min="4"  max="22"  step="0.25"  value="12"(input)="onHourChanged($event)"
+            ></mat-slider>
+          </mat-list-item>
+          
+          <mat-card-subtitle>Position</mat-card-subtitle>
+          <mat-form-field>
+            <mat-label>Latitude</mat-label>
+            <input  matInput placeholder="lat"  type="number"  [(ngModel)]="geoPos.latitude"  min="-85" max="85"/>                       
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Longitude</mat-label>
+            <input  matInput placeholder="long"  type="number"  [(ngModel)]="geoPos.longitude" min="-180" max="180" />                       
+          </mat-form-field>
+        </mat-card-content>
+        <mat-card-footer><span [innerText]="utcDate"></span></mat-card-footer>
+      </mat-card>
+      
     </div>
     <div fxFlex="20" style="background-color: lightgreen">
-      <mat-slide-toggle
-        matTooltip="Los cambios afectan a todos o al seleccionado"
-        [(ngModel)]="selectedAllTrackers"
-        >Todos</mat-slide-toggle
-      >
-      <mat-form-field>
-        <mat-label>Select</mat-label>
-        <input    matInput   placeholder="Ex. Pizza"
-          type="number" 
-          id="myNumber"
-          [disabled]="selectedAllTrackers"
-          [(ngModel)]="selectedIdTracker"
-        /> 
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>EulerY</mat-label>
-        <input    matInput   placeholder="EulerX" type="number" id="myNumber" step="0.1"  [(ngModel)]="eulerX"   (change)="changedGeoPos($event)"/> 
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>EulerZ</mat-label>
-        <input    matInput   placeholder="EulerZ" type="number" id="myNumber" step="0.1" [(ngModel)]="eulerZ" (change)="changedGeoPos($event)"  /> 
-      </mat-form-field>
+      <mat-card>
+        <mat-card-header><mat-card-title>Tracker selection</mat-card-title></mat-card-header>
+        <mat-card-content>
+          <mat-slide-toggle  matTooltip="Los cambios afectan a todos o al seleccionado"  [(ngModel)]="selectedAllTrackers">All selected</mat-slide-toggle>
+          <mat-form-field>
+            <mat-label>Only select</mat-label>
+            <input    matInput   placeholder="Tracker number" type="number" 
+              id="myNumber" [disabled]="selectedAllTrackers" [(ngModel)]="selectedIdTracker"/> 
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
     </div>
     <div fxFlex="40" style="background-color: lightblue">
-      <mat-list>
-        <mat-list-item>
-          <mat-label>angulo:</mat-label>
-          <mat-slider
-            thumbLabel
-            tickInterval="30"
-            min="-80"
-            max="80"
-            step="5"
-            value="0"
-            (input)="onAngleChanged($event)"
-          ></mat-slider>
-        </mat-list-item>
-        <mat-list-item>
-          <mat-label>bateria:</mat-label
-          ><mat-slider
-            thumbLabel
-            tickInterval="10"
-            min="0"
-            max="100"
-            step="5"
-            value="100"
-            (input)="onBatteryChanged($event)"
-            [disabled]="true"
-            >Battery</mat-slider
-          >
-        </mat-list-item>
-      </mat-list>
-    </div>
-    <div fxFlex="40" style="background-color: lightseagreen">
-      <mat-list>
-        <mat-list-item>
-          <mat-slide-toggle
-            matTooltip="Alarma No coms"
-            [(ngModel)]="alarms.noCom"
-            (change)="onAlarmsChanged($event)"
-            >No COM</mat-slide-toggle
-          >
-        </mat-list-item>
-        <mat-list-item>
-          <mat-slide-toggle
-            matTooltip="Posicion seguridad activada"
-            [(ngModel)]="alarms.safePosition"
-            (change)="onAlarmsChanged($event)"
-            >Safe Position</mat-slide-toggle
-          >
-        </mat-list-item>
-        <mat-list-item>
-          <mat-slide-toggle
-            matTooltip="Alarma de bateria"
-            [(ngModel)]="alarms.battery"
-            (change)="onAlarmsChanged($event)"
-            [disabled]="true"
-            >bateria</mat-slide-toggle
-          >
-        </mat-list-item>
-        <!--  <mat-list-item>
-              <mat-slide-toggle matTooltip="Alarma de motor" [(ngModel)]="alarms.motor" (change)="onAlarmsChanged($event)" [disabled]="true">motor</mat-slide-toggle>  
-            </mat-list-item>     -->
-      </mat-list>
+      <mat-card>
+        <mat-card-header><mat-card-title>Tracker</mat-card-title></mat-card-header>
+        <mat-card-content>
+          <mat-card-subtitle>Movimiento</mat-card-subtitle>         
+            <mat-label>angulo:</mat-label>
+            <mat-slider thumbLabel tickInterval="30"  min="-80"  max="80" step="5" value="0" (input)="onAngleChanged($event)">                
+            </mat-slider>
+            <mat-label>bateria:</mat-label>
+            <mat-slider  thumbLabel tickInterval="10" min="0" max="100"
+              step="5" value="100" (input)="onBatteryChanged($event)" [disabled]="true">
+              Battery
+            </mat-slider>
+          <mat-card-subtitle>Indicadores</mat-card-subtitle>         
+            <mat-slide-toggle  matTooltip="Alarma No coms"  [(ngModel)]="alarms.noCom"(change)="onAlarmsChanged($event)">
+              No COM
+            </mat-slide-toggle>
+            <mat-slide-toggle matTooltip="Posicion seguridad activada" [(ngModel)]="alarms.safePosition" (change)="onAlarmsChanged($event)">
+              Safe Position
+            </mat-slide-toggle>
+            <mat-slide-toggle matTooltip="Alarma de bateria" [(ngModel)]="alarms.battery" (change)="onAlarmsChanged($event)" [disabled]="true">
+              bateria
+            </mat-slide-toggle>
+            <!--  <mat-list-item>
+                  <mat-slide-toggle matTooltip="Alarma de motor" [(ngModel)]="alarms.motor" (change)="onAlarmsChanged($event)" [disabled]="true">motor</mat-slide-toggle>  
+                </mat-list-item>     -->
+        </mat-card-content>
+      </mat-card>      
     </div>
   </div>
   <div style="background-color: lightsalmon"></div>
