--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,3 @@
-footer {
-    background-color: #ddd;
-    border-top: 1px solid #bbb;
-    text-align: center;
-  }
+.example-spacer{
+    flex: 1 1 auto;
+}
