--- a/src/app/three-test/three-test.component.html
+++ b/src/app/three-test/three-test.component.html
@@ -1,30 +1,31 @@
-<div flex fxLayout="row" class="container">
-  <div id="controles" fxLayout="column" fxFlex="20" style="background-color: lightblue;">
+
+<mat-sidenav-container fxFlexFill>
+  <mat-sidenav mode="side" opened  >
     <mat-card>
-      <mat-card-header><mat-icon mat-card-avatar>preview</mat-icon><mat-card-title>Date</mat-card-title></mat-card-header>
-      <mat-card-content>
-        <mat-form-field appearance="fill" id="dateTimeId" >
-          <mat-label>Fecha</mat-label>
-          <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" (dateChange)="changedDate($event)"  [maxlength]="10"/>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
-        </mat-form-field>          
-        <mat-label>Hora</mat-label>
-        <mat-slider  thumbLabel    tickInterval="2"  min="4" matTooltip="Hora solar local"
-          max="22"  step="0.25"  value="12"(input)="onHourChanged($event)">
-        </mat-slider>
-      </mat-card-content>
-      <mat-card-footer><span class="fs-8" matTooltip="Fecha UTC">{{utcDate | date:'medium' }}</span></mat-card-footer>
+    <mat-card-header><mat-icon mat-card-avatar>preview</mat-icon><mat-card-title>Date</mat-card-title></mat-card-header>
+    <mat-card-content>
+      <mat-form-field appearance="fill" id="dateTimeId" >
+        <mat-label>Fecha</mat-label>
+        <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" (dateChange)="changedDate($event)"  [maxlength]="10"/>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
+      </mat-form-field>          
+      <mat-label>Hora</mat-label>
+      <mat-slider  thumbLabel    tickInterval="2"  min="4" matTooltip="Hora solar local"
+        max="22"  step="0.25"  value="12"(input)="onHourChanged($event)">
+      </mat-slider>
+    </mat-card-content>
+    <mat-card-footer><span class="fs-8" matTooltip="Fecha UTC">{{utcDate | date:'medium' }}</span></mat-card-footer>
     </mat-card>
     <mat-card>
       <mat-card-header><mat-icon mat-card-avatar>my_location</mat-icon><mat-card-title>Location</mat-card-title></mat-card-header>
       <mat-card-content>          
-        <mat-form-field>
+        <mat-form-field class="latlon">
           <mat-label>Latitude</mat-label>
           <input  matInput placeholder="lat"  type="number"  [(ngModel)]="geoPos.latitude"  min="-85" max="85" />                       
         </mat-form-field>
 
-        <mat-form-field>
+        <mat-form-field class="latlon">
           <mat-label>Longitude</mat-label>
           <input  matInput placeholder="long"  type="number"  [(ngModel)]="geoPos.longitude" min="-180" max="180" />                       
         </mat-form-field>         
@@ -44,18 +45,14 @@
         </mat-form-field>
       </mat-card-content>
     </mat-card>  
-   <!--  <mat-card>
+    <mat-card>
       <mat-card-header><mat-icon mat-card-avatar>exposure</mat-icon><mat-card-title>Tracker</mat-card-title></mat-card-header>
       <mat-card-content>
         <mat-card-subtitle>Movimiento</mat-card-subtitle>         
           <mat-label>angulo:</mat-label>
           <mat-slider thumbLabel tickInterval="30"  min="-80"  max="80" step="5" value="0" (input)="onAngleChanged($event)">                
-          </mat-slider>
-          <mat-label>bateria:</mat-label>
-          <mat-slider  thumbLabel tickInterval="10" min="0" max="100"
-            step="5" value="100" (input)="onBatteryChanged($event)" [disabled]="true">
-            Battery
-          </mat-slider>
+          </mat-slider>    
+          
         <mat-card-subtitle>Indicadores</mat-card-subtitle>         
           <mat-slide-toggle  matTooltip="Alarma No coms"  [(ngModel)]="alarms.noCom"(change)="onAlarmsChanged($event)">
             No COM
@@ -67,9 +64,12 @@
             bateria
           </mat-slide-toggle> 
       </mat-card-content>
-    </mat-card>  -->   
+    </mat-card>
+  </mat-sidenav>
+<mat-sidenav-content style="background-color: lightblue;" >
+  <div style="background-color: lightseagreen;" class="example-events" fxFlexFill>    
+    <canvas id="c" fxFlexFill></canvas>
   </div>
-  <div id="controles" fxLayout="column" fxFlex="80" style="background-color: lightcoral;">
-    <canvas id="c" ></canvas>
-  </div>
-</div>
+</mat-sidenav-content>
+</mat-sidenav-container>
+
