Terreno 3D si existe

--- a/src/app/three-test/components/dlg-get-srv/dlg-get-srv.component.html
+++ b/src/app/three-test/components/dlg-get-srv/dlg-get-srv.component.html
@@ -9,12 +9,15 @@
     <!--login-->
     <mat-form-field appearance="fill">
         <mat-label>Login</mat-label>
-        <input matInput [(ngModel)]="data.login">
+        <input matInput [(ngModel)]="data.login" >        
     </mat-form-field>
     
     <mat-form-field appearance="fill">
        <mat-label>Password</mat-label>
-       <input matInput [(ngModel)]="data.pass">
+       <input matInput [(ngModel)]="data.pass" [type]="hidePass ? 'password' : 'text'">
+       <button mat-icon-button matSuffix (click)="hidePass = !hidePass" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePass">
+        <mat-icon>{{hidePass ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
     </mat-form-field> 
     <button mat-button (click)="onConnectClick()">Connect</button>
     <mat-form-field appearance="fill">
